Fix: [DS-270] counter alignment inside tag

--- a/packages/components/src/counter/src/Counter.css
+++ b/packages/components/src/counter/src/Counter.css
@@ -27,12 +27,14 @@
 
 /* BASIC */
 .o-ui-counter-basic {
-    display: inline-block;
+    align-items: center;
+    display: inline-flex;
 }
 
 /* DIVIDER */
 .o-ui-counter-divider {
-    display: inline-block;
+    align-items: center;
+    display: inline-flex;
     position: relative;
     padding-left: var(--hop-space-inset-sm);
 }
